@@ -21,14 +21,10 @@
 					expanded: true,
 					children : [{
 						text: CMDBuild.Translation.administration.modClass.tabs.geo_attributes,
-//						leaf: false,
-//						expanded: true,
 						layerName: CMDBUILD_LAYERS_FOLDER_NAME,
 						checked: true
 					}, {
 						text: CMDBuild.Translation.administration.modcartography.external_services.title,
-//						leaf: false,
-//						expanded: true,
 						layerName: EXTERNAL_LAYERS_FOLDER_NAME,
 						checked: true
 					}]
